--- a/PoliceSketch/Base.lproj/Main.storyboard
+++ b/PoliceSketch/Base.lproj/Main.storyboard
@@ -17,26 +17,107 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EYa-zj-6Ps">
-                                <rect key="frame" x="190" y="103" width="220" height="100"/>
+                                <rect key="frame" x="190" y="100" width="220" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="2Cu-bt-1Yw"/>
                                     <constraint firstAttribute="width" constant="220" id="oW6-Xi-JMj"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jYv-za-j8N">
-                                <rect key="frame" x="190" y="253" width="220" height="100"/>
+                                <rect key="frame" x="190" y="250" width="220" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="220" id="2OM-oU-5kp"/>
                                     <constraint firstAttribute="height" constant="100" id="ZtH-WI-2uD"/>
                                 </constraints>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tLn-Wc-tSJ">
+                                <rect key="frame" x="190" y="400" width="220" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="0T0-em-5o3"/>
+                                    <constraint firstAttribute="width" constant="220" id="K7O-BC-cVQ"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zv9-pY-iOj">
+                                <rect key="frame" x="140" y="100" width="50" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="B21-Sc-csW"/>
+                                    <constraint firstAttribute="height" constant="100" id="Ofd-mu-VgQ"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wWx-Lw-gMC">
+                                <rect key="frame" x="410" y="100" width="50" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="BsE-FG-69K"/>
+                                    <constraint firstAttribute="width" constant="50" id="Yc0-v3-u8R"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YhK-xC-GMn">
+                                <rect key="frame" x="140" y="250" width="50" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="44N-tw-5jH"/>
+                                    <constraint firstAttribute="width" constant="50" id="qbz-c5-51N"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QGL-i1-vVO">
+                                <rect key="frame" x="410" y="250" width="50" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="CP8-4N-YZN"/>
+                                    <constraint firstAttribute="width" constant="50" id="KNw-jq-yEP"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CvU-Gd-a4f">
+                                <rect key="frame" x="140" y="400" width="50" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Iii-lM-Iec"/>
+                                    <constraint firstAttribute="width" constant="50" id="RmP-I3-ByE"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H1W-l9-qAL">
+                                <rect key="frame" x="410" y="400" width="50" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="mjh-cm-EcK"/>
+                                    <constraint firstAttribute="width" constant="50" id="oKp-0e-Sbk"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="EYa-zj-6Ps" firstAttribute="centerY" secondItem="zv9-pY-iOj" secondAttribute="centerY" id="0UW-Ra-Zeo"/>
+                            <constraint firstItem="tLn-Wc-tSJ" firstAttribute="top" secondItem="jYv-za-j8N" secondAttribute="bottom" constant="50" id="4Rp-UY-hFS"/>
+                            <constraint firstItem="H1W-l9-qAL" firstAttribute="leading" secondItem="tLn-Wc-tSJ" secondAttribute="trailing" id="4l3-AO-xPw"/>
+                            <constraint firstItem="tLn-Wc-tSJ" firstAttribute="centerY" secondItem="CvU-Gd-a4f" secondAttribute="centerY" id="9no-fl-vME"/>
                             <constraint firstAttribute="centerX" secondItem="EYa-zj-6Ps" secondAttribute="centerX" id="A1a-5j-zbF"/>
-                            <constraint firstItem="EYa-zj-6Ps" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="83" id="Mt0-lz-THz"/>
+                            <constraint firstItem="EYa-zj-6Ps" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="80" id="Mt0-lz-THz"/>
+                            <constraint firstItem="QGL-i1-vVO" firstAttribute="centerY" secondItem="jYv-za-j8N" secondAttribute="centerY" id="RcT-9k-IwK"/>
+                            <constraint firstAttribute="centerX" secondItem="tLn-Wc-tSJ" secondAttribute="centerX" id="Twf-Cx-ipU"/>
                             <constraint firstAttribute="centerX" secondItem="jYv-za-j8N" secondAttribute="centerX" id="Yzj-Ez-TwB"/>
+                            <constraint firstItem="jYv-za-j8N" firstAttribute="leading" secondItem="YhK-xC-GMn" secondAttribute="trailing" id="Ziy-gl-BL1"/>
                             <constraint firstItem="jYv-za-j8N" firstAttribute="top" secondItem="EYa-zj-6Ps" secondAttribute="bottom" constant="50" id="cMt-Dd-LEW"/>
+                            <constraint firstItem="EYa-zj-6Ps" firstAttribute="centerY" secondItem="wWx-Lw-gMC" secondAttribute="centerY" id="j2t-23-d9t"/>
+                            <constraint firstItem="QGL-i1-vVO" firstAttribute="leading" secondItem="jYv-za-j8N" secondAttribute="trailing" id="n6K-q2-y4o"/>
+                            <constraint firstItem="tLn-Wc-tSJ" firstAttribute="leading" secondItem="CvU-Gd-a4f" secondAttribute="trailing" id="nI4-dX-XGH"/>
+                            <constraint firstItem="wWx-Lw-gMC" firstAttribute="leading" secondItem="EYa-zj-6Ps" secondAttribute="trailing" id="pvP-55-MmW"/>
+                            <constraint firstItem="jYv-za-j8N" firstAttribute="centerY" secondItem="YhK-xC-GMn" secondAttribute="centerY" id="tdi-Te-Eqm"/>
+                            <constraint firstItem="EYa-zj-6Ps" firstAttribute="leading" secondItem="zv9-pY-iOj" secondAttribute="trailing" id="tmc-nm-pCT"/>
+                            <constraint firstItem="H1W-l9-qAL" firstAttribute="centerY" secondItem="tLn-Wc-tSJ" secondAttribute="centerY" id="vcV-hF-GB9"/>
                         </constraints>
                     </view>
                 </viewController>
